--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 
     </section>
     <footer>
-      {% if site.github.is_project_page %}
+      {% if site.github.is_project_page or site.github.is_user_page %}
       <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>. Fork me on <a href="{{ site.github.repository_url }}" target="_blank">GitHub</a></p>
       {% endif %}
       <p><small>Hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></small><p>
@@ -56,6 +56,8 @@
     </footer>
   </div>
   <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+
+<pre>{{ site.github | inspect }}</pre>
 </body>
 
 </html>
