--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,13 +25,9 @@
 
       <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-      {% if site.github.is_project_page %}
+      {% if site.github.is_project_page or site.github.is_user_page %}
       <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{
             site.github.repository_nwo }}</small></a></p>
-      {% endif %}
-
-      {% if site.github.is_user_page %}
-      <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
       {% endif %}
 
       {% if site.show_downloads %}
@@ -57,7 +53,6 @@
   </div>
   <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
 
-<pre>{{ site.github | inspect }}</pre>
 </body>
 
 </html>
